# brainfuck

./: .travis.yml  CMakeLists.txt  README.md
appdir/: brainfuck.desktop
include/: executor.h  interpreter.h  parser.h  stack.h
src/: executor.c  interpreter.c  main.c  parser.c  stack.c
testing/: Hello.b  Mandelbrot.b  bitwidth.b
